--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -2,14 +2,31 @@ body {
   font-family: 'Courier New', Courier, monospace;
 }
 
+.title-container {
+  display: flex;
+  justify-content: center;
+}
+
+.content-container {
+  display: flex;
+  justify-content: center;
+  gap: 52px;
+}
+
 img {
   width: 100px;
   height: 100px;
 }
 
+.item {
+  text-align: center;
+  width: 200px;
+}
+
 .title {
   font-size: 36px;
   font-weight: 900;
+  margin-bottom: 32px;
 }
 
 /* do not edit this footer */
