Submit solution for flexercise 5

--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -15,11 +15,34 @@ body {
   justify-content: center;
 }
 
+.header {
+  font-weight: bold;
+  font-size: 20px;
+  flex: 1;
+}
+
 .modal {
   background: white;
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+  padding: 16px;
+  display: flex;
+  gap: 16px;
+}
+
+.col-container {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.row-container {
+  display: flex;
+}
+
+.but-container {
+  display: flex;
 }
 
 .icon {
@@ -33,6 +56,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-shrink: 0;
 }
 
 .close-button {
